2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* DAM.wrl:
	* IBC.wrl:
	* RAM4.wrl:
	* Revit1.wrl:
	* Stadium.wrl:
	* ramcis2.wrl:
	* Bentley1.wrl:
	* CADstudio.wrl:
	* Preheat48.wrl:
	* DAM.wrl:
	* GoldenGate.wrl:
	* IBC.wrl:
	* RAM4.wrl:
	* Revit1.wrl:
	* ramcis2.wrl:
	* Stadium.wrl:
	* Bentley1.wrl:
	* CADstudio.wrl:
	* Preheat48.wrl:
	* AISC_Sculpture_J.wrl:
	* TrainingStructure.wrl:
	* GoldenGate.wrl:
	* AISC_Sculpture_J.wrl:
	* TrainingStructure.wrl: 

2013-07-22  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-07-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* bucketWheel.wrl: 

2013-07-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* SFNode.wrl:
	* index.wrl:
	* SFNode.input.wrl: 

2013-07-13  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointGroup.wrl: 

2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Clone.wrl:
	* X3DScene.rootNodes.wrl:
	* X3DScene.rootNodes.2.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Add&RemoveChildren.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Add&RemoveChildren.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Grid.wrl:
	* Grid.wrl:
	* index.wrl:
	* TransformHandle.wrl: 

2013-07-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Viewpoint.bind.wrl: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Beethoven.wrl:
	* TransformHandle.wrl:
	* ProximitySensor.wrl: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj: 

2013-07-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* index.wrl:
	* map.htm:
	* moon.jpg: