@@ -1,5 +1,9 @@
 2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeView.cpp: 
+
+2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineTree.h:
 	* OutlineTreeModel.cpp: 
 
