@@ -1,5 +1,9 @@
 2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* vrmlbanner.wrl: 
+
+2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* test.wrl: 
 
 2013-07-24  Holger Seelig  <holger.seelig@yahoo.de>
